<resources>
    <string name="app_name">物载天下</string>
    <string name="pullDownRefreshText">下拉刷新</string>
    <string name="refreshingText">加载中&#8230;</string>
    <string name="releaseRefreshText">释放更新</string>
    <string name="noMoreData">没有更多数据了</string>
    <string name="loggingLoad">登录中&#8230;</string>
    <string name="sendingLoad">发送中&#8230;</string>
    <string name="dataLoad">数据加载中&#8230;</string>
    <string name="submissionLoad">提交中&#8230;</string>
    <string name="crossLoad">上传中&#8230;</string>
    <string name="download">下载中&#8230;</string>
    <string name="shareJumpLoad">分享跳转中&#8230;</string>
    <string name="readAndWrite">这款应用需要获取读写权限，才能使用</string>
    <string name="sdPermission">您拒绝了「SD卡读写权限」所需要的相关权限!请到「设置」开启权限</string>
    <string name="checkNetwork">无法连接,请检查网络连接是否正常</string>
    <string name="illegalArgumentException">客户端错误，传输了不合法或不正确的数据(非法数据异常)</string>
    <string name="clientError">客户端未知错误</string>
    <string name="serverReturnsDataError">服务器返回数据错误</string>
    <string name="serverReturnsDataNull">服务器返回数据为空</string>
    <string name="serverReturnsImgDataNull">服务器返回图片数据为空</string>
    <string name="urlError">客户端请求的URL错误</string>
    <string name="otherError">其他错误</string>
    <string name="grammarError">服务器不理解请求的语法</string>
    <string name="serverError">服务器错误</string>
    <string name="authenticationError"> 网络请求身份验证错误</string>
    <string name="serverRejectsRequest">服务器拒绝请求</string>
    <string name="requestError">客户端请求出错，妨碍了服务器的处理</string>
    <string name="jsonError">Json解析错误</string>
    <string name="clickRefresh">，点击刷新</string>
    <string name="forFailure">获取失败</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="skip">跳过</string>
    <string name="experienceImmediately">立即体验</string>
    <string name="alphanumeric">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789</string>
    <string name="login">登录</string>
    <string name="accountNumber">手机号</string>
    <string name="accountErroe">手机号错误</string>
    <string name="hintAccountText">请输入您的手机号</string>
    <string name="inputPhone">请输入正确的手机号</string>
    <string name="password">密码</string>
    <string name="passwordErroe">密码错误</string>
    <string name="hintPasswordText">请输入密码</string>
    <string name="hintPasswordText2">账号或密码错误</string>
    <string name="hintPasswordText1">密码长度应在6～20位内</string>
    <string name="forgotPassword">忘记密码?</string>
    <string name="register">注册</string>
    <string name="register1">立即注册</string>
    <string name="errorCode">请输入验证码</string>
    <string name="phone">手机号</string>
    <string name="phone1">电话</string>
    <string name="thirdpartylogin">第三方账号快捷登录</string>
    <string name="authorizationLoad">授权中&#8230;</string>
    <string name="authoriseErr">授权失败，请重试</string>
    <string name="authoriseErr1">您取消了授权</string>
    <string name="authoriseErr2">您还没有安装应用,请下载应用</string>
    <string name="authoriseErr3">没有安装应用</string>
    <string name="thirdqq">QQ</string>
    <string name="thirdweixin">微信</string>
    <string name="nan">男</string>
    <string name="nv">女</string>
    <string name="selectRegisterTypeTitle">选择注册类型</string>
    <string name="selectRegisterType">selectRegisterType</string>
    <string name="personalUser">personalUser</string>
    <string name="enterpriseUser">enterpriseUser</string>
    <string name="newUserRegister">新用户注册</string>
    <string name="resetpwd">重置密码成功，请登录！</string>
    <string name="password1">确认密码</string>
    <string name="referralcode">推荐码</string>
    <string name="referralcode1">请输入推荐码（可选）</string>
    <string name="password2">请再输入一遍密码</string>
    <string name="password3">请输入6～20位密码</string>
    <string name="testget">已发送</string>
    <string name="retrievePassword">找回密码</string>
    <string name="verificationCode">验证码</string>
    <string name="testGetCode">获取验证码</string>
    <string name="revalidation">重新验证</string>
    <string name="toResend">s后重发</string>
    <string name="clickFinish">点击完成代表您同意</string>
    <string name="myagreement">我同意</string>
    <string name="myagreement1">点注册，即表示已阅读并同意</string>
    <string name="agreement">《物载天下服务协议》</string>
    <string name="agreement4">物载天下服务协议</string>
    <string name="agreement1">同意《物载天下服务协议》才能注册使用</string>
    <string name="determine">确定</string>
    <string name="resetPassword">重置密码</string>
    <string name="hintAccountText1">请输入企业法人的手机号</string>
    <string name="bindPhone">绑定手机号</string>
    <string name="bindPhoneSuccessfully">绑定手机号成功！</string>
    <string name="personalAuthentication">个人认证</string>
    <string name="enterpriseAuthentication">企业认证</string>
    <string name="hintName">请输入姓名</string>
    <string name="hintName1">请输入正确的姓名</string>
    <string name="hintIDtext">请输入身份证号</string>
    <string name="hintIDerrorText">请输入正确的身份证号</string>
    <string name="registeredPhoneNumber">手机号注册</string>
    <string name="information">基本信息</string>
    <string name="prompt">请填写您的真实信息，通过后将不能修改</string>
    <string name="realName">真实姓名</string>
    <string name="sex">性别</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="unknown">未知</string>
    <string name="IdNumber">身份证号</string>
    <string name="holdingIdPhoto">手持身份证照片</string>
    <string name="sample">请参照“示例”，保证身份证号码清晰可见。</string>
    <string name="sample1">遮挡，模糊，或传不相关图片的都将导致审核不通过。</string>
    <string name="uploudIdCardPhoto">请上传身份证正面照片</string>
    <string name="uploudIdCardPhotoBack">请上传身份证反面照片</string>
    <string name="qualification">资质认证</string>
    <string name="companyName1">请填写营业执照上的公司名字</string>
    <string name="enterpriseName">企业简称</string>
    <string name="registrationNumber">营业执照注册号</string>
    <string name="registrationNumber1">请填写组织机构代码/社会信用代码</string>
    <string name="registrationNumber2">请填写正确的组织机构代码/社会信用代码</string>
    <string name="legalPersonIdNumber">法人身份证号</string>
    <string name="hintName2">请输入正确的法人姓名</string>
    <string name="legalPersonIdNumber1">请填写正确的法人身份证号</string>
    <string name="phoneNumber">企业联系电话</string>
    <string name="phoneNumber1">请输入正确的公司电话</string>
    <string name="address">地址</string>
    <string name="accountName">开户名称</string>
    <string name="accountName1">请填写在银行开户的企业名字</string>
    <string name="openingBank">开户行</string>
    <string name="settlementAccount">结算账号</string>
    <string name="settlementAccount1">请填写以企业名字开户的银行账号</string>
    <string name="hold_pic">请上传企业法人身份证手持照片</string>
    <string name="front_pic">请上传企业法人身份证正面照片</string>
    <string name="back_pic">请上传企业法人身份证反面照片</string>
    <string name="businessLicense_pic">请上传企业营业执照照片</string>
    <string name="hintName3">请输入正确的操作人姓名</string>
    <string name="operationIdNumber">操作人身份证号</string>
    <string name="operationIdNumber1">请填写正确的操作人身份证号</string>
    <string name="sp_hold_pic">请上传操作人身份证手持照片</string>
    <string name="sp_front_pic">请上传操作人身份证正面照片</string>
    <string name="sp_back_pic">请上传操作人身份证反面照片</string>
    <string name="accountSettings">账户设置</string>
    <string name="headPortrait">头像</string>
    <string name="userName">姓名</string>
    <string name="userPhone">手机号</string>
    <string name="accountDeposit">账户保证金</string>
    <string name="failurePay">未缴纳</string>
    <string name="checked">已缴纳</string>
    <string name="frozen">冻结</string>
    <string name="personalCertificate">个人认证</string>
    <string name="inAuthentication">认证中</string>
    <string name="certified">认证通过</string>
    <string name="refuse">认证失败</string>
    <string name="delete">后台删除</string>
    <string name="noData">没有数据</string>
    <string name="noData1">请拍照后再提交</string>
    <string name="pleaseWait">请耐心等待</string>
    <string name="pleaseWait1">请联系客服，进行处理</string>
    <string name="imagePathError">图片路径错误</string>
    <string name="denyPermission">您拒绝了「图片选择」所需要的相关权限!</string>
    <string name="needPermission">图片选择需要以下权限:\n\n1.访问设备上的照片\n\n2.拍照\n\n3.读写权限</string>
    <string name="exitProcedureAgain">再按一次退出程序</string>
    <string name="locationPermissions">定位选择需要以下权限:\n\n1.访问设备上的gps\n\n2.读写权限</string>
    <string name="locationPermissions1">您拒绝了「定位」所需要的相关权限!</string>
    <string name="logisticsName">LogisticsName</string>
    <string name="location">location</string>
    <string name="cityDistribution">同城专车</string>
    <string name="longTrunk">城际专车</string>
    <string name="locationFailure">定位失败</string>
    <string name="locationFailure1">定位失败，请手动输入</string>
    <string name="loginAg">请重新登录</string>
    <string name="realTime">实时</string>
    <string name="urgent">加急</string>
    <string name="makeAppointment">预约</string>
    <string name="appointmentTime1">预约时间</string>
    <string name="appointmentTime3">预约时间：</string>
    <string name="enterAddressSameCity1">您选择的是同城专线，请输入同城地址</string>
    <string name="appointmentTime2">请选择预约时间</string>
    <string name="pleaseEnterDeparturePoint">请输入出发地</string>
    <string name="pleaseEnterInformationShipper">请输入发货人相关信息</string>
    <string name="enterDestination">请输入目的地</string>
    <string name="pleaseEnterConsigneeInformation">请输入收货人相关信息</string>
    <string name="cargoInformation">货物信息</string>
    <string name="submitOrders">提交订单</string>
    <string name="assignedVehicle">指派车辆</string>
    <string name="announcement">公告通知</string>
    <string name="close">关闭</string>
    <string name="licensePlateNumber">车牌号</string>
    <string name="pleaseLicensePlateNumber">请输入车牌号</string>
    <string name="confirmAssigned">确认指派</string>
    <string name="checkDriver">查看我的司机</string>
    <string name="dateStr">yyyy年MM月dd日</string>
    <string name="hoursStr">HH时</string>
    <string name="minutesStr">mm分</string>
    <string name="timeStr">yyyy年MM月dd日HH点mm分</string>
    <string name="selectAddress">选择地址</string>
    <string name="cancel">取消</string>
    <string name="pleaseEnterDeliveryLocation">请输入发货地点</string>
    <string name="pleaseEnterReceivingPlace">请输入收货地点</string>
    <string name="commonlyAddress">常用地址</string>
    <string name="setCommonAddress">设为常用地址</string>
    <string name="enterAddressSameCity">请选择正确的同城地址</string>
    <string name="enterIntercityAddress">请选择正确的城际地址</string>
    <string name="notChangeCity">您选择的是同城配送，不能更改目的地城市</string>
    <string name="selectCity">选择城市</string>
    <string name="china">中国</string>
    <string name="currentPositioningCity">当前定位城市</string>
    <string name="recentVisitCity">最近访问城市</string>
    <string name="recent">最近</string>
    <string name="hotCity">热门城市</string>
    <string name="hot">热门</string>
    <string name="locateFailure">定位失败请重新定位！</string>
    <string name="cancelOrder1">取消订单</string>
    <string name="refusedLift">拒绝取消</string>
    <string name="agreedCancel">同意取消</string>
    <string name="viewQuotation">查看报价</string>
    <string name="checkAbnormal">查看异常</string>
    <string name="viewShippingTrack">查看运输轨迹</string>
    <string name="contactDriver">联系司机</string>
    <string name="evaluationDriver">评价司机</string>
    <string name="confirmPayment">确认支付</string>
    <string name="seeEvaluation">查看评价</string>
    <string name="notHigherWithdrawalLimit">不可高于可提现额度</string>
    <string name="bankName">银行名称</string>
    <string name="presentingBank">如农业银行，工商银行等</string>
    <string name="paymentAccount">收款账号</string>
    <string name="promptAccount">如工商银行账号</string>
    <string name="openAccountName">开户名</string>
    <string name="accountHolderName">开户人姓名</string>
    <string name="withdrawalAmount1">提现金额</string>
    <string name="hintWithdrawal">*请确认以上信息无误，三个工作日之内到账</string>
    <string name="hintWithdrawal1">提现日期每月15号—20号</string>
    <string name="confirmSubmit">确认提交</string>
    <string name="originalPassword">原密码</string>
    <string name="pleaseCurrentPassword">请输入当前密码</string>
    <string name="newPassword">新密码</string>
    <string name="pleaseNewPassword">请输入新密码</string>
    <string name="confirmPassword">确认密码</string>
    <string name="pleasePasswordAgain">请再次输入新密码</string>
    <string name="submit">提交</string>
</resources>