<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_bottom"
    style="@style/Match50"
    android:background="@color/white"
    android:gravity="center_vertical|right"
    android:orientation="horizontal"
    android:visibility="visible">

    <TextView
        android:id="@+id/tv_checkAbnormal"
        android:layout_width="@dimen/dimen86"
        android:layout_height="@dimen/dimen32"
        android:layout_marginRight="@dimen/dimen15"
        android:background="@drawable/shape_cancelorder"
        android:gravity="center"
        android:text="@string/checkAbnormal"
        android:textColor="@color/titletextcolors"
        android:textSize="@dimen/textsize13"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_cancelOrder"
        android:layout_width="@dimen/dimen86"
        android:layout_height="@dimen/dimen32"
        android:layout_marginRight="@dimen/dimen15"
        android:background="@drawable/shape_cancelorder"
        android:gravity="center"
        android:text="@string/cancelOrder1"
        android:textColor="@color/titletextcolors"
        android:textSize="@dimen/textsize13"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_refusedLift"
        android:layout_width="@dimen/dimen86"
        android:layout_height="@dimen/dimen32"
        android:layout_marginRight="@dimen/dimen15"
        android:background="@drawable/shape_cancelorder"
        android:gravity="center"
        android:text="@string/refusedLift"
        android:textColor="@color/titletextcolors"
        android:textSize="@dimen/textsize13"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_agreedCancel"
        android:layout_width="@dimen/dimen86"
        android:layout_height="@dimen/dimen32"
        android:layout_marginRight="@dimen/dimen15"
        android:background="@drawable/shape_checkdriver"
        android:gravity="center"
        android:text="@string/agreedCancel"
        android:textColor="@color/announcementCloseColors"
        android:textSize="@dimen/textsize13"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_viewQuotation"
        android:layout_width="@dimen/dimen86"
        android:layout_height="@dimen/dimen32"
        android:layout_marginRight="@dimen/dimen15"
        android:background="@drawable/shape_login"
        android:gravity="center"
        android:text="@string/viewQuotation"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize13"
        android:visibility="gone" />


    <TextView
        android:id="@+id/tv_viewShippingTrack"
        android:layout_width="@dimen/dimen86"
        android:layout_height="@dimen/dimen32"
        android:layout_marginRight="@dimen/dimen15"
        android:background="@drawable/shape_cancelorder"
        android:gravity="center"
        android:text="@string/viewShippingTrack"
        android:textColor="@color/titletextcolors"
        android:textSize="@dimen/textsize13"
        android:visibility="gone" />


    <TextView
        android:id="@+id/tv_confirmPayment"
        android:layout_width="@dimen/dimen86"
        android:layout_height="@dimen/dimen32"
        android:layout_marginRight="@dimen/dimen15"
        android:background="@drawable/shape_login"
        android:gravity="center"
        android:text="@string/confirmPayment"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize13"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_contactDriver"
        android:layout_width="@dimen/dimen86"
        android:layout_height="@dimen/dimen32"
        android:layout_marginRight="@dimen/dimen15"
        android:background="@drawable/shape_login"
        android:gravity="center"
        android:text="@string/contactDriver"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize13"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tv_evaluationDriver"
        android:layout_width="@dimen/dimen86"
        android:layout_height="@dimen/dimen32"
        android:layout_marginRight="@dimen/dimen15"
        android:background="@drawable/shape_login"
        android:gravity="center"
        android:text="@string/evaluationDriver"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize13"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_seeEvaluation"
        android:layout_width="@dimen/dimen86"
        android:layout_height="@dimen/dimen32"
        android:layout_marginRight="@dimen/dimen15"
        android:background="@drawable/shape_login"
        android:gravity="center"
        android:text="@string/seeEvaluation"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize13"
        android:visibility="gone" />

</LinearLayout>