<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MatchMatch"
    android:background="@color/background"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/common_title"></include>

    <TextView
        style="@style/DividerWidth"
        android:layout_marginTop="@dimen/dimen25" />


    <LinearLayout
        style="@style/Match44"
        android:background="@color/mainColor"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/WrapWrap"
            android:layout_marginLeft="@dimen/dimen15"
            android:text="@string/phone"
            android:textColor="@color/titletextcolors"
            android:textSize="@dimen/textsize15" />

        <EditText
            android:id="@+id/et_phone"
            style="@style/MatchMatch"
            android:layout_marginLeft="@dimen/dimen41"
            android:layout_marginRight="@dimen/dimen15"
            android:background="@android:color/transparent"
            android:hint="@string/hintAccountText"
            android:inputType="phone"
            android:maxLength="11"
            android:textColorHint="@color/hintcolors"
            android:textCursorDrawable="@drawable/shape_cursor"
            android:textSize="@dimen/textsize15" />

    </LinearLayout>

    <TextView
        style="@style/DividerWidth"
        android:layout_marginLeft="@dimen/dimen15"
        android:layout_marginRight="@dimen/dimen15" />

    <LinearLayout
        style="@style/Match44"
        android:background="@color/mainColor"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/WrapWrap"
            android:layout_marginLeft="@dimen/dimen15"
            android:text="@string/verificationCode"
            android:textColor="@color/titletextcolors"
            android:textSize="@dimen/textsize15" />


        <EditText
            android:id="@+id/et_code"
            style="@style/AutoMatch"
            android:layout_marginLeft="@dimen/dimen41"
            android:layout_marginRight="@dimen/dimen5"
            android:background="@android:color/transparent"
            android:hint="@string/errorCode"
            android:inputType="number"
            android:maxLength="8"
            android:textColorHint="@color/hintcolors"
            android:textCursorDrawable="@drawable/shape_cursor"
            android:textSize="@dimen/textsize15" />

        <TextView
            android:id="@+id/tv_code"
            android:layout_width="@dimen/dimen75"
            android:layout_height="@dimen/dimen26"
            android:layout_marginRight="@dimen/dimen15"
            android:background="@drawable/shape_code"
            android:gravity="center"
            android:text="@string/testGetCode"
            android:textColor="@color/lonincolors"
            android:textSize="@dimen/textsize12" />
    </LinearLayout>


    <TextView
        style="@style/DividerWidth"
        android:layout_marginLeft="@dimen/dimen15"
        android:layout_marginRight="@dimen/dimen15" />


    <LinearLayout
        android:id="@+id/ll_pwd"
        style="@style/Match44"
        android:background="@color/mainColor"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/WrapWrap"
            android:layout_marginLeft="@dimen/dimen15"
            android:text="@string/password"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textsize15" />


        <EditText
            android:id="@+id/et_pwd"
            style="@style/MatchMatch"
            android:layout_marginLeft="@dimen/dimen56"
            android:layout_marginRight="@dimen/dimen15"
            android:background="@android:color/transparent"
            android:hint="@string/password3"
            android:inputType="textPassword"
            android:maxLength="20"
            android:password="true"
            android:singleLine="true"
            android:textColorHint="@color/hintcolors"
            android:textCursorDrawable="@drawable/shape_cursor"
            android:textSize="@dimen/textsize15" />

    </LinearLayout>


    <TextView
        style="@style/DividerWidth"
        android:layout_marginLeft="@dimen/dimen15"
        android:layout_marginRight="@dimen/dimen15" />


    <LinearLayout
        android:id="@+id/ll_referralCode"
        style="@style/Match44"
        android:background="@color/mainColor"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/WrapWrap"
            android:layout_marginLeft="@dimen/dimen15"
            android:text="@string/referralcode"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textsize15" />

        <EditText
            android:id="@+id/et_referralCode"
            style="@style/AutoMatch"
            android:layout_marginLeft="@dimen/dimen41"
            android:layout_marginRight="@dimen/dimen15"
            android:background="@android:color/transparent"
            android:hint="@string/referralcode1"
            android:inputType="text"
            android:digits="1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:maxLength="8"
            android:singleLine="true"
            android:textColorHint="@color/hintcolors"
            android:textCursorDrawable="@drawable/shape_cursor"
            android:textSize="@dimen/textsize15" />
    </LinearLayout>


    <TextView style="@style/DividerWidth" />


    <LinearLayout
        style="@style/MatchWrap"
        android:layout_marginTop="@dimen/dimen14"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_agreement"
            style="@style/WrapWrap"
            android:layout_marginLeft="@dimen/dimen15"
            android:src="@mipmap/agreement" />

        <TextView
            style="@style/WrapWrap"
            android:layout_marginLeft="@dimen/dimen3"
            android:text="@string/myagreement"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textsize13" />

        <TextView
            android:id="@+id/tv_agreement"
            style="@style/WrapWrap"
            android:layout_marginLeft="@dimen/dimen3"
            android:text="@string/agreement"
            android:textColor="@color/lonincolors"
            android:textSize="@dimen/textsize13" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_registe"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen45"
        android:layout_marginLeft="@dimen/dimen15"
        android:layout_marginRight="@dimen/dimen15"
        android:layout_marginTop="@dimen/dimen26"
        android:background="@drawable/shape_login"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/mainColor"
        android:textSize="@dimen/textsize16" />


</LinearLayout>