<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MatchMatch"
    android:background="@color/background"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/common_title"></include>


    <LinearLayout
        style="@style/Match44"
        android:background="@color/mainColor"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/WrapWrap"
            android:layout_marginLeft="@dimen/dimen15"
            android:text="@string/withdrawalAmount1"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textsize15" />

        <EditText
            android:id="@+id/et_withdrawalAmount1"
            style="@style/AutoWrap"
            android:layout_marginLeft="@dimen/dimen41"
            android:layout_marginRight="@dimen/dimen15"
            android:background="@android:color/transparent"
            android:hint="@string/notHigherWithdrawalLimit"
            android:inputType="numberDecimal"
            android:maxLength="11"
            android:singleLine="true"
            android:textColorHint="@color/hintcolors"
            android:textCursorDrawable="@drawable/shape_cursor"
            android:textSize="@dimen/textsize15" />
    </LinearLayout>


    <LinearLayout
        style="@style/MatchWrap"
        android:background="@color/mainColor"
        android:orientation="vertical">

        <TextView
            style="@style/DividerWidth"
            android:layout_marginLeft="@dimen/dimen15"
            android:layout_marginRight="@dimen/dimen15" />
    </LinearLayout>

    <LinearLayout
        style="@style/Match44"
        android:background="@color/mainColor"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/WrapWrap"
            android:layout_marginLeft="@dimen/dimen15"
            android:text="@string/bankName"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textsize15" />

        <EditText
            android:id="@+id/et_bankName"
            style="@style/AutoWrap"
            android:layout_marginLeft="@dimen/dimen41"
            android:layout_marginRight="@dimen/dimen15"
            android:background="@android:color/transparent"
            android:hint="@string/presentingBank"
            android:inputType="text"
            android:maxLength="11"
            android:singleLine="true"
            android:textColorHint="@color/hintcolors"
            android:textCursorDrawable="@drawable/shape_cursor"
            android:textSize="@dimen/textsize15" />


    </LinearLayout>

    <LinearLayout
        style="@style/MatchWrap"
        android:background="@color/mainColor"
        android:orientation="vertical">

        <TextView
            style="@style/DividerWidth"
            android:layout_marginLeft="@dimen/dimen15"
            android:layout_marginRight="@dimen/dimen15" />
    </LinearLayout>

    <LinearLayout
        style="@style/Match44"
        android:background="@color/mainColor"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/WrapWrap"
            android:layout_marginLeft="@dimen/dimen15"
            android:text="@string/paymentAccount"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textsize15" />

        <EditText
            android:id="@+id/et_paymentAccount"
            style="@style/AutoWrap"
            android:layout_marginLeft="@dimen/dimen41"
            android:layout_marginRight="@dimen/dimen15"
            android:background="@android:color/transparent"
            android:hint="@string/promptAccount"
            android:inputType="number"
            android:singleLine="true"
            android:textColorHint="@color/hintcolors"
            android:textCursorDrawable="@drawable/shape_cursor"
            android:textSize="@dimen/textsize15" />


    </LinearLayout>

    <LinearLayout
        style="@style/MatchWrap"
        android:background="@color/mainColor"
        android:orientation="vertical">

        <TextView
            style="@style/DividerWidth"
            android:layout_marginLeft="@dimen/dimen15"
            android:layout_marginRight="@dimen/dimen15" />
    </LinearLayout>

    <LinearLayout
        style="@style/Match44"
        android:background="@color/mainColor"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/WrapWrap"
            android:layout_marginLeft="@dimen/dimen15"
            android:text="@string/openAccountName"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textsize15" />

        <EditText
            android:id="@+id/et_openAccountName"
            style="@style/AutoWrap"
            android:layout_marginLeft="@dimen/dimen54"
            android:layout_marginRight="@dimen/dimen15"
            android:background="@android:color/transparent"
            android:hint="@string/accountHolderName"
            android:inputType="text"
            android:maxLength="11"
            android:singleLine="true"
            android:textColorHint="@color/hintcolors"
            android:textCursorDrawable="@drawable/shape_cursor"
            android:textSize="@dimen/textsize15" />


    </LinearLayout>

    <TextView
        style="@style/WrapWrap"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen15"
        android:text="@string/hintWithdrawal"
        android:textColor="@color/hintcolors"
        android:textSize="@dimen/textsize13" />

    <TextView
        style="@style/WrapWrap"
        android:layout_gravity="center"
        android:text="@string/hintWithdrawal1"
        android:textColor="@color/hintcolors"
        android:textSize="@dimen/textsize13" />


    <TextView
        android:id="@+id/tv_confirmSubmit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen40"
        android:layout_marginLeft="@dimen/dimen15"
        android:layout_marginRight="@dimen/dimen15"
        android:layout_marginTop="@dimen/dimen32"
        android:background="@drawable/shape_login"
        android:gravity="center"
        android:text="@string/confirmSubmit"
        android:textColor="@color/mainColor"
        android:textSize="@dimen/textsize12" />


</LinearLayout>