<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MatchMatch"
    android:background="@color/background"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/common_title" />


    <LinearLayout
        style="@style/Match45"
        android:layout_marginTop="@dimen/dimen15"
        android:background="@color/mainColor"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/WrapWrap"
            android:layout_marginLeft="@dimen/dimen15"
            android:text="@string/originalPassword"
            android:textColor="@color/titletextcolors"
            android:textSize="@dimen/textsize15" />


        <EditText
            android:id="@+id/et_originalPassword"
            style="@style/MatchMatch"
            android:layout_marginLeft="@dimen/dimen39"
            android:layout_marginRight="@dimen/dimen15"
            android:background="@android:color/transparent"
            android:digits="@string/alphanumeric"
            android:hint="@string/pleaseCurrentPassword"
            android:inputType="textNoSuggestions"
            android:maxLength="20"
            android:password="true"
            android:singleLine="true"
            android:textColorHint="@color/cDCDCDColors"
            android:textCursorDrawable="@drawable/shape_cursor"
            android:textSize="@dimen/textsize15" />

    </LinearLayout>

    <include layout="@layout/commom_dividerwidth1" />

    <LinearLayout
        style="@style/Match45"
        android:background="@color/mainColor"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/WrapWrap"
            android:layout_marginLeft="@dimen/dimen15"
            android:text="@string/newPassword"
            android:textColor="@color/titletextcolors"
            android:textSize="@dimen/textsize15" />


        <EditText
            android:id="@+id/et_newPassword"
            style="@style/MatchMatch"
            android:layout_marginLeft="@dimen/dimen39"
            android:layout_marginRight="@dimen/dimen15"
            android:background="@android:color/transparent"
            android:digits="@string/alphanumeric"
            android:hint="@string/pleaseNewPassword"
            android:inputType="textNoSuggestions"
            android:maxLength="20"
            android:password="true"
            android:singleLine="true"
            android:textColorHint="@color/cDCDCDColors"
            android:textCursorDrawable="@drawable/shape_cursor"
            android:textSize="@dimen/textsize15" />

    </LinearLayout>

    <include layout="@layout/commom_dividerwidth1" />

    <LinearLayout
        style="@style/Match45"
        android:background="@color/mainColor"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/WrapWrap"
            android:layout_marginLeft="@dimen/dimen15"
            android:text="@string/confirmPassword"
            android:textColor="@color/titletextcolors"
            android:textSize="@dimen/textsize15" />


        <EditText
            android:id="@+id/et_newPassword1"
            style="@style/MatchMatch"
            android:layout_marginLeft="@dimen/dimen24"
            android:layout_marginRight="@dimen/dimen15"
            android:background="@android:color/transparent"
            android:digits="@string/alphanumeric"
            android:hint="@string/pleasePasswordAgain"
            android:inputType="textNoSuggestions"
            android:maxLength="20"
            android:password="true"
            android:singleLine="true"
            android:textColorHint="@color/cDCDCDColors"
            android:textCursorDrawable="@drawable/shape_cursor"
            android:textSize="@dimen/textsize15" />

    </LinearLayout>


    <TextView
        android:id="@+id/tv_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen45"
        android:layout_marginLeft="@dimen/dimen15"
        android:layout_marginRight="@dimen/dimen15"
        android:layout_marginTop="@dimen/dimen26"
        android:background="@drawable/shape_login"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="@color/mainColor"
        android:textSize="@dimen/textsize16" />

</LinearLayout>